fix right align

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,15 @@ html {
 }
 
 .btn-ghost:hover {
+  color: #495562;
   background-color: #fff;
   border-color: #fff;
-  color: #495562;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .right-align {
+    text-align: right;
+  }
+
 }
